# playlist-spotify-watchmix

./: README.md
.github/workflows/: watch_mix.yml
src/: pyproject.toml
src/assets/: gerar_watch_mix.py  pyproject.toml
