[tool.poetry]
name = "gerar_watch_mix"
version = "0.1.0"
description = ""
authors = ["Sissa", "<example@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"